<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="de.ticket_match.ticketmatch.MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#2196F3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/tm_logo"
                android:layout_margin="10dp"
                android:onClick="btn_website" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Change Your Password"
                android:layout_gravity="center"
                android:gravity="left"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:alpha="0.12"/>
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:layout_width="200dp"

                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/changePassword_currentPassword"
                android:hint="Current Password"
                android:singleLine="true"
                android:selectAllOnFocus="true"
                android:layout_gravity="center"
                android:alpha="0.38"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/changePassword_newPassword"
                    android:hint="New Password"
                    android:singleLine="true"
                    android:selectAllOnFocus="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:alpha="0.38"
                    />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/changePassword_newPassword_reenter"
                android:hint="Reenter Password"
                android:singleLine="true"
                android:selectAllOnFocus="true"
                android:layout_gravity="center"
                android:alpha="0.38"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <View
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:background="#222222"
                android:layout_gravity="center"
                android:alpha="0.12"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <!--<Button
                android:text="Change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="btn_changepassword"
                android:alpha="0.54"
                />-->

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_btn_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_done_white_18dp"
                app:elevation="3dp"
                android:onClick="btn_changepassword"
                app:backgroundTint="#FFAB00"
                android:clickable="true" />

        </LinearLayout>

    </ScrollView>

</android.widget.RelativeLayout>
