...

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_more_vert_white_36dp"
                    android:id="@+id/overflow_button"
                    android:onClick="btn_tm_logo" />

            </LinearLayout>

        </LinearLayout>

...
