<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="de.ticket_match.ticketmatch.EditMyProfile">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#2196F3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/tm_logo"
                    android:layout_margin="10dp"
                    android:onClick="btn_website"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Edit Your Profile"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:alpha="0.12"/>
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:text="Fill in all information to edit your profile!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal|bold"
            android:alpha="0.54"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_firstname"
            android:hint="First name"
            android:layout_gravity="center"
            android:singleLine="true"
            android:alpha="0.54"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_lastname"
            android:hint="Last name"
            android:layout_gravity="center"
            android:singleLine="true"
            android:alpha="0.54"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_location"
            android:hint="Location"
            android:layout_gravity="center"
            android:singleLine="true"
            android:alpha="0.54"/>


        <TextView
            android:text="Birthday"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_birthdate"
            android:drawableRight="@android:drawable/ic_menu_today"
            android:background="?attr/editTextBackground"
            android:gravity="bottom"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:alpha="0.54"
            android:onClick="editmyprofile_birthdate" />

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_myprofile_gender"
            android:alpha="0.38"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <View
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:background="#222222"
            android:layout_gravity="center"
            android:alpha="0.12"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

       <!-- <Button
            android:text="Edit Profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="btn_edit_myprofile"
            android:alpha="0.54"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/btn_edit_myprofile" />-->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_btn_edit_myprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_done_white_18dp"
            app:elevation="3dp"
            android:onClick="btn_edit_myprofile"
            app:backgroundTint="#FFAB00"
            android:clickable="true" />


    </LinearLayout>

    </ScrollView>


</RelativeLayout>
