<?xml version="1.0" encoding="UTF-8" ?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/edit_profile"
        android:title="Edit profile" />
    <item android:id="@+id/logout"
        android:title="Logout" />
    </menu>