...


                    <TextView
                        android:text="Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/myprofile_name"
                        android:layout_margin="1dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:alpha="0.87" />

                    <TextView
                        android:text="Gender and Age"
...
